--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "build":"npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch",
-    "productionBuild":"npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "hassan",
+    "yaseen",
+    "hassanyaseen",
+    "frontenddeveloper",
+    "frontend",
+    "webdeveloper"
+  ],
+  "author": "Hassan Yaseen",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.4"
