--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch"
+    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch",
+    "vBuild": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css "
   },
   "keywords": [
     "hassan",
