--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch",
-    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css "
+    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css ",
+    "gitupdate": "git add . && git commit -m && git push",
+    "testing": "echo '$`grep`'"
   },
   "keywords": [
     "hassan",
